<resources>
    <string name="app_name">Smart Home</string>
    <string name="action_settings">Settings</string>
    <string name="et_username_hint">User Name</string>
    <string name="et_password_hint">Password</string>
    <string name="btn_login">login</string>
    <string name="activity_login_label">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_room">Room</string>
    <string name="menu_device">Device</string>
    <string name="menu_service">Service</string>
    <string name="menu_auth_service">Auth Service</string>
    <string name="menu_logout">Logout</string>
    <string name="activity_main_label">Home</string>
    <string name="activity_room_label">Room</string>
    <string name="activity_device_label">Device</string>
    <string name="activity_setting_label">Setting</string>
    <string name="et_host_address_hint">Host Address</string>
    <string name="btn_submit">Submit</string>
</resources>
